<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/service_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"/>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/service_start_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_start_button"/>
            <Button
                android:id="@+id/service_stop_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_stop_button"
                android:visibility="invisible"/>
        </FrameLayout>
    </LinearLayout>
    <CheckBox
            android:id="@+id/service_auto_sms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_auto_sms"/>
    <LinearLayout
            android:id="@+id/message_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">
        <ListView
            android:id="@+id/messages"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/address_type"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/address_type_hint"
                android:text="@string/address_type_default"
                android:singleLine="true"/>
            <EditText
                android:id="@+id/address"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address_default"
                android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/message"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:selectAllOnFocus="true"/>
            <Button
                android:id="@+id/message_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_send_button"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>